--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<h1> this is my first git program</h1>
+<h1> this is my first git program so enjoy with your code</h1>
 </body>
 </html>
